--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,20 @@
   margin: 0;
   padding: 0;
 }
+
+html {
+  font-family: 'Lato', sans-serif;
+  font-size: 16px;
+}
+
+.cm-editor {
+  @apply h-full;
+}
+
+.MuiButtonBase-root {
+  text-transform: none !important;
+}
+
+.MuiTab-root {
+  text-transform: none !important;
+}
